--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <img src="https://backoffice.algoritmika.org/uploads/2021/04/carousel-1684591_0_1618254197.svg" width="830px" height="550px"/>
     </main>
     <footer>
-      <a class="social" href=""><img src="images/vk.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/vk.png" height="100px"/></a>
         
-      <a class="social" href=""><img src="images/tg.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/tg.png"  height="100px"/></a>
         
-      <a class="social" href=""><img src="images/discord.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/discord.png"  height="100px"/></a>
     </footer>
   </body>
 </html>
