--- a/info.html
+++ b/info.html
@@ -39,11 +39,11 @@
       <p>Онлайн редактор HTML/CSS <a  class="link-text" href="https://codly.ru/"><b>Codly</b></a></p>
     </main>
     <footer>
-      <a class="social" href=""><img src="images/vk.png" width="100px" height="100px"/></a>
+       <a class="social" href=""><img src="images/vk.png" height="100px"/></a>
         
-      <a class="social" href=""><img src="images/tg.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/tg.png"  height="100px"/></a>
         
-      <a class="social" href=""><img src="images/discord.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/discord.png"  height="100px"/></a>
     </footer>
   </body>
 </html>
