--- a/khuzin.html
+++ b/khuzin.html
@@ -18,11 +18,11 @@
       <img src="images/2.png" width="830px" height="300px"/>
     </main>
     <footer>
-      <a class="social" href=""><img src="images/vk.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/vk.png" height="100px"/></a>
         
-      <a class="social" href=""><img src="images/tg.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/tg.png"  height="100px"/></a>
         
-      <a class="social" href=""><img src="images/discord.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/discord.png"  height="100px"/></a>
     </footer>
   </body>
 </html>
