--- a/mysites.html
+++ b/mysites.html
@@ -23,11 +23,10 @@
         <p>Бонус: <a class="link-text" href="https://nadvilboa.github.io/-4-3_bonus/"><b>Сайт</b></a> турнира по киберспорту</p>
     </main>
     <footer>
-      <a class="social" href=""><img src="images/vk.png" width="100px" height="100px"/></a>
+       <a class="social" href=""><img src="images/vk.png" height="100px"/></a>
         
-      <a class="social" href=""><img src="images/tg.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="images/tg.png"  height="100px"/></a>
         
-      <a class="social" href=""><img src="images/discord.png" width="100px" height="100px"/></a>
-    </footer>
+      <a class="social" href=""><img src="images/discord.png"  height="100px"/></a>
   </body>
 </html>
