Update and rename desighstudio to desighstudio.html

--- a/desighstudio.html
+++ b/desighstudio.html
@@ -2,7 +2,7 @@
 
  <head>
      <title>Pixel Design</title>
-    <link rel="stylesheet" href="style.css/">
+    <link rel="stylesheet" href="style1.css/">
      </head>
     
     <body>
