--- a/mysites.html
+++ b/mysites.html
@@ -20,7 +20,7 @@
         
       <p><a class="link-text" 
         href="https://www.figma.com/file/ze7pOuDsPFlEotcUssMyLs/%D0%9C5%D0%A31---%D0%B8%D1%81%D0%BF%D1%80%D0%B0%D0%B2%D1%8C-%D0%BC%D0%B0%D0%BA%D0%B5%D1%82-(1)-(Copy)?node-id=0%3A1&t=lUN0ekghsleGQm8k-1"><b>Макет</b></a> одностраничного сайта дельфинария, с рекламой услуг, сделанный в Figma</p>
-        <p><a class="link-text" href="https://nadvilboa.github.io/5-4-1/"><b>Сайт</b></a> семьи Самойловых, вёрстка по макету, отступы</p>
+        <p><a class="link-text" href="desighstudio.html"><b>Сайт</b></a> Студии дизайна, css </p>
         <p>Бонус: <a class="link-text" href="https://nadvilboa.github.io/-4-3_bonus/"><b>Сайт</b></a> турнира по киберспорту</p>
     </main>
     <footer>
