--- a/mysites.html
+++ b/mysites.html
@@ -29,5 +29,7 @@
       <a class="social" href=""><img src="images/tg.png"  height="100px"/></a>
         
       <a class="social" href=""><img src="images/discord.png"  height="100px"/></a>
+    </footer>
+    
   </body>
 </html>
