--- a/desighstudio.html
+++ b/desighstudio.html
@@ -7,7 +7,7 @@
     
     <body>
         <header>
-            <img src="logo.png"/>
+            <img src="logo.png" width="100px"/>
             <a href="#news">Новости</a>
             <a href="#contest">Конкурс</a>
             <a href="#plans">Планы развития</a>
@@ -15,11 +15,11 @@
         <main>
             <h1>Pixel Design</h1>
             <h2 id="news">Наши последние новости</h2>
-            <p>В нашей студии новый дизайнер: пиксель Cube. Именно он будет выполнять ваши заказы по трёхмерной графике. Увлекается ладшафтным и интерьерным дизайном. Недавно он давал интервью газете <i>Progress news</i>.<br/><img src ="news.png"></p>
+            <p>В нашей студии новый дизайнер: пиксель Cube. Именно он будет выполнять ваши заказы по трёхмерной графике. Увлекается ладшафтным и интерьерным дизайном. Недавно он давал интервью газете <i>Progress news</i>.<br/><img src ="news.png" width="200px"></p>
             <h2 id="contest">Готовимся к конкурсу</h2>
-            <p>Весной следующего года мы участвуем в конкурсе дизайна. Наши работы будут представлены в направлениях: <i>веб-дизайн, полиграфический дизайн, дизайн интерьеров</i>. По каждому направлению мы собираемся представить несколько работ, которые пройдут предварительный отбор в нашей студии.<br/><img src="pixel-cells-.png"/></p>
+            <p>Весной следующего года мы участвуем в конкурсе дизайна. Наши работы будут представлены в направлениях: <i>веб-дизайн, полиграфический дизайн, дизайн интерьеров</i>. По каждому направлению мы собираемся представить несколько работ, которые пройдут предварительный отбор в нашей студии.<br/><img src="pixel-cells.png" width="200px"/></p>
             <h2 contest="plans">Планы развития</h2>
-            <p>В этом месяце мы готовим годовое планирование нашей работы. Кроме того, что мы принимаем и выполняем клиентские заказы по дизайну, мы участвуем в конкурсах, учимся на онлайн курсах, повышающих наше мастерство, просматриваем сборники лучших работ, которые можно найти в Интернете.<br/><img src="plans.png"/></p>
+            <p>В этом месяце мы готовим годовое планирование нашей работы. Кроме того, что мы принимаем и выполняем клиентские заказы по дизайну, мы участвуем в конкурсах, учимся на онлайн курсах, повышающих наше мастерство, просматриваем сборники лучших работ, которые можно найти в Интернете.<br/><img src="plans.png" width="200px"/></p>
         </main>
         <footer>
             <p><b><i>Контакты</i></b></p>
