--- a/khuzin.html
+++ b/khuzin.html
@@ -14,8 +14,8 @@
         <li>учусь в лицее</li>
         <li>пытаюсь делать сайты</li>
       </ul>
-      <img src="images/1.png" width="830px" height="550px"/>
-      <img src="images/2.png" width="830px" height="300px"/>
+      <img src="images/1.png" width="300px"/>
+      <img src="images/2.png" width="830px"/>
     </main>
     <footer>
       <a class="social" href=""><img src="images/vk.png" height="100px"/></a>
